# yt-agent

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml  readme.md
agent-work/: README.md  s1_agent_v1.md  s2_rag_r1.md  s6_rag_recursion.md
agent-work/templates/: plan-template.md  prp-template.md  spec-template.md
dashboard/: evaluation.html  evaluation.json
dashboard/chunk_space/: projection.json  question.json
skills/ai-agent-system-planner/: SKILL.md
src/: cli.py  config.py  observability.py
src/agents/: context.py  models.py  prompts.py  rag_transcript_agent.py  transcript_agent.py
src/evals/: evaluation.py
src/transcripts/: fetcher.py  models.py  storage.py  youtube.py
tests/: conftest.py  test_cli.py  test_config.py  test_observability.py
tests/agents/: test_models.py  test_prompts.py  test_rag_transcript_agent.py  test_transcript_agent.py
tests/transcripts/: test_fetcher.py  test_models.py  test_storage.py  test_youtube.py
